--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.10.44",
     "@splinetool/viewer": "^1.10.44",
+    "@studio-freight/lenis": "^1.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "lenis": "^1.1.14-dev.5",
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
     "react": "^19.0.0",
