--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@splinetool/runtime": "^1.10.44",
     "@splinetool/viewer": "^1.10.44",
     "@studio-freight/lenis": "^1.0.42",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
