--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-snowfall": "^2.4.0",
     "spline": "^0.0.0",
     "tailwind-merge": "^3.3.1"
   },
